Render with two Blender processes on same computer: compression issues? #39521

Closed
opened 2014-03-30 21:22:52 +02:00 by Colin · 13 comments

System Information
Win7
Nvidia Quatro FX 4600
ATI Radeon 3000

Blender Version
Not sure if it ever worked, but just tried 2.7

Short description of error
Open two copies of blender on same pc, only grabs render frame from one program or none

Exact steps for others to reproduce the error
I am trying to render a stereoscopic animation, I don't know if blender can do this (game engine can do stereo) in one pass..
Basically I have two cameras and a short animation, rather than waiting for left to render, I opened blender again on same pc and started rendering the right camera at same time.

I got a garbled mess with mpeg options, dropped/black frames for both files.
Then I tried PNG and noticed I was getting the same image for left and right (but individual manual shots were correct, render button, not animate) and then I started getting black frames while I was checking image output.

I think I even tried one blender copy on cpu and the other on cuda and still nothing useful.

If screen/vid card makes a difference, one blender window is on nvidia and the other is on the ATI card.

Thanks for your time! Love this program!

I'm not sure if this ever worked.. (I think I did it before though on an older version), but it would be great if it did

**System Information** Win7 Nvidia Quatro FX 4600 ATI Radeon 3000 **Blender Version** Not sure if it ever worked, but just tried 2.7 **Short description of error** Open two copies of blender on same pc, only grabs render frame from one program or none **Exact steps for others to reproduce the error** I am trying to render a stereoscopic animation, I don't know if blender can do this (game engine can do stereo) in one pass.. Basically I have two cameras and a short animation, rather than waiting for left to render, I opened blender again on same pc and started rendering the right camera at same time. I got a garbled mess with mpeg options, dropped/black frames for both files. Then I tried PNG and noticed I was getting the same image for left and right (but individual manual shots were correct, render button, not animate) and then I started getting black frames while I was checking image output. I think I even tried one blender copy on cpu and the other on cuda and still nothing useful. If screen/vid card makes a difference, one blender window is on nvidia and the other is on the ATI card. Thanks for your time! Love this program! I'm not sure if this ever worked.. (I *think* I did it before though on an older version), but it would be great if it did
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @DerBen-2

Added subscriber: @DerBen-2

Added subscriber: @mont29

Added subscriber: @mont29

Well, if you render to the same (video/png) file from two different processes, no wonder why it fails… If you render in two different files, I do not see why it would break.

Please attach small .blend file demonstrating the issue, with precise steps to reproduce it.

Well, if you render to the same (video/png) file from two different processes, no wonder why it fails… If you render in two different files, I do not see why it would break. Please attach small .blend file demonstrating the issue, with precise steps to reproduce it.
Author

HauntedHouse19BUG.blend
Nope, I render to left and right files for videos or sequences. Basically I have a left and right video, and in turn a left and right image sequence rendered.

Left.mpg and Right.mpg

or

left001.png
right001.png
left002.png
right002.png

Anyway, there's cameraL and cameraR

Open blender twice, load the attached file in both.

select cameraL in one and cameraR in the other,
CTRL+num0 on both windows

you can try PNG or mpeg

hit animate and watch the output. (you might have to set an output folder)
The files left and right should not be identical, but off by a bit.

[HauntedHouse19BUG.blend](https://archive.blender.org/developer/F83509/HauntedHouse19BUG.blend) Nope, I render to left and right files for videos or sequences. Basically I have a left and right video, and in turn a left and right image sequence rendered. Left.mpg and Right.mpg or left001.png right001.png left002.png right002.png Anyway, there's cameraL and cameraR Open blender twice, load the attached file in both. select cameraL in one and cameraR in the other, CTRL+num0 on both windows you can try PNG or mpeg hit animate and watch the output. (you might have to set an output folder) The files left and right should not be identical, but off by a bit.
Author

Adjust Output folder and name as per the camera!

Adjust Output folder and name as per the camera!
Bastien Montagne changed title from Rendering technicality to Render with two Blender processes on same computer: compression issues? 2014-03-31 08:38:40 +02:00

OK, I can confirm the issue… I really wonder what happens here, sometimes you even get pictures which mix both left and right views!

OK, I can confirm the issue… I really wonder what happens here, sometimes you even get pictures which mix both left and right views!
Bastien Montagne self-assigned this 2014-03-31 08:45:22 +02:00

Ah, in fact, think I know what’s happening here… You are using full buffers for OSA, which means Blender has to save them in temp files. Obviously, it generates same names for both right and left cam… Will see how to add some kind of "salt" to those, using the PID or timestamp e.g. maybe?

Ah, in fact, think I know what’s happening here… You are using full buffers for OSA, which means Blender has to save them in temp files. Obviously, it generates same names for both right and left cam… Will see how to add some kind of "salt" to those, using the PID or timestamp e.g. maybe?
Author

"...sometimes you even get pictures which mix both left and right views!"
Some would call that modern art...

Thanks for the speedy responses!

"...sometimes you even get pictures which mix both left and right views!" Some would call that modern art... Thanks for the speedy responses!

This issue was referenced by blender/blender-addons-contrib@6cd717e0a3

This issue was referenced by blender/blender-addons-contrib@6cd717e0a3c6151f6dc578dcfc27cc269b172c99

This issue was referenced by 6cd717e0a3

This issue was referenced by 6cd717e0a3c6151f6dc578dcfc27cc269b172c99

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 6cd717e0a3.

Closed by commit 6cd717e0a3.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39521
No description provided.