Fix T39521: Render with two Blender processes on same computer: compression issues?

We need to salt temp exr filenames with pid, else several instances of Blender rendering
the same scene on same machine and using "Save Buffers" option would use the same files!